--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.15.2",
+    "morgan": "^1.8.1",
     "scrape-it": "^3.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
