--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mobygames-scraper",
+  "name": "gameventory-server",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
@@ -10,8 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.2",
-    "morgan": "^1.8.1",
-    "scrape-it": "^3.3.2"
+    "mongoose": "^4.9.5",
+    "morgan": "^1.8.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
