--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "axios": "^0.16.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.17.2",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.9.5",
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
